--- a/css/templatemo-comparto.css
+++ b/css/templatemo-comparto.css
@@ -24,13 +24,19 @@ Text Color: #666
   outline: none;
 }
 
-ul, h1, h2, h3, h4, p, figure {
-    padding: 0;
-    margin: 0;
+ul,
+h1,
+h2,
+h3,
+h4,
+p,
+figure {
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: "Open Sans", Arial, sans-serif;
   font-size: 18px;
   overflow-x: hidden;
   padding-left: 15px;
@@ -38,65 +44,114 @@ body {
   margin: 0;
 }
 
-h2 { font-size: 1.5rem; }
-
-a { 
-    transition: all 0.3s ease; 
-    text-decoration: none;
+h2 {
+  font-size: 1.5rem;
 }
 
-a:hover { text-decoration: none; }
-button:focus { outline: none; }
-p { 
+a {
+  transition: all 0.3s ease;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+button:focus {
+  outline: none;
+}
+p {
   color: #666;
-  line-height: 1.7; 
+  line-height: 1.7;
   margin-bottom: 35px;
 }
 
-h1, h2, h3, h4, h5, h6 { color: #333; }
-
-.container-fluid {
-    max-width: 1210px;
-    margin-left: auto;
-    margin-right: auto;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #333;
 }
 
-.tm-mb-0 { margin-bottom: 0; }
-.tm-mb-1 { margin-bottom: 20px; }
-.tm-mb-2 { margin-bottom: 40px; }
-.tm-mb-3 { margin-bottom: 60px; }
-.tm-mb-4 { margin-bottom: 30px; }
-.tm-bg-color-1 { background-color: #9999CC; }
-.tm-bg-color-2 { background-color: #CC9999; }
-.tm-bg-color-3 { background-color: #666666; }
-.tm-bg-color-4 { background-color: #99CCFF; }
-.tm-bg-color-5 { background-color: #99CC99; }
-.tm-bg-color-6 { background-color: #F2F2F2; }
-.tm-bg-color-7 { background-color: #DDD; }
-.tm-bg-color-8 { background-color: #EDEEEF; } /* Nav background */
-.tm-bg-color-white { background-color: white; }
-.tm-text-color-1 { color: #666; }
-.tm-text-color-2 { color: #333; }
-.tm-text-white { color: #fff; }
-.text-center { text-align: center; }
+.container-fluid {
+  max-width: 1210px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tm-mb-0 {
+  margin-bottom: 0;
+}
+.tm-mb-1 {
+  margin-bottom: 20px;
+}
+.tm-mb-2 {
+  margin-bottom: 40px;
+}
+.tm-mb-3 {
+  margin-bottom: 60px;
+}
+.tm-mb-4 {
+  margin-bottom: 30px;
+}
+.tm-bg-color-1 {
+  background-color: #9999cc;
+}
+.tm-bg-color-2 {
+  background-color: #cc9999;
+}
+.tm-bg-color-3 {
+  background-color: #666666;
+}
+.tm-bg-color-4 {
+  background-color: #99ccff;
+}
+.tm-bg-color-5 {
+  background-color: #99cc99;
+}
+.tm-bg-color-6 {
+  background-color: #f2f2f2;
+}
+.tm-bg-color-7 {
+  background-color: #ddd;
+}
+.tm-bg-color-8 {
+  background-color: #edeeef;
+} /* Nav background */
+.tm-bg-color-white {
+  background-color: white;
+}
+.tm-text-color-1 {
+  color: #666;
+}
+.tm-text-color-2 {
+  color: #333;
+}
+.tm-text-white {
+  color: #fff;
+}
+.text-center {
+  text-align: center;
+}
 
 .tm-site-header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    height: 210px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 210px;
 }
 
 .tm-site-name-container {
-    width: 29.752%;
-    min-width: 300px;
-    margin-right: 20px;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-transform:uppercase;
+  width: 29.752%;
+  min-width: 300px;
+  margin-right: 20px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
 }
 
 .tm-nav-container {
@@ -133,13 +188,17 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
 
   .tm-site-name-container {
     margin-right: 0;
-    padding:50px;
+    padding: 50px;
   }
 }
 
 @media (max-width: 600px) {
-  .tm-nav-item { margin: 10px; }
-  .tm-nav-item:last-child { margin-right: 10px; }
+  .tm-nav-item {
+    margin: 10px;
+  }
+  .tm-nav-item:last-child {
+    margin-right: 10px;
+  }
 
   .tm-nav ul {
     display: flex;
@@ -163,7 +222,7 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
 .tm-nav-item.current .tm-nav-link,
 .tm-nav-link:hover {
   color: white;
-  background-color: #CC9999;
+  background-color: #cc9999;
 }
 
 @media (max-width: 1033px) {
@@ -172,7 +231,9 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
     height: 120px;
   }
 
-  .tm-nav-link { padding-left: 20px; }
+  .tm-nav-link {
+    padding-left: 20px;
+  }
 }
 
 .tm-img-responsive {
@@ -190,14 +251,16 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
   width: 40.5%;
 }
 
-.tm-row { display: flex; }
+.tm-row {
+  display: flex;
+}
 
 .tm-btn {
   display: inline-block;
   padding: 15px 40px;
   font-size: 1.1rem;
   border: none;
-  background-color: #CC9999;
+  background-color: #cc9999;
   color: white;
 }
 
@@ -206,8 +269,12 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
   background-color: #875959;
 }
 
-.tm-social-row { padding: 70px; }
-.tm-icon { width: 33.3334%; }
+.tm-social-row {
+  padding: 70px;
+}
+.tm-icon {
+  width: 33.3334%;
+}
 
 .tm-icon-inner {
   max-width: 250px;
@@ -216,16 +283,24 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
   text-align: center;
 }
 
-.tm-icon-inner > a > * { color: white; }
-.tm-icon-inner h3 { line-height: 1.7; }
+.tm-icon-inner > a > * {
+  color: white;
+}
+.tm-icon-inner h3 {
+  line-height: 1.7;
+}
 
 .tm-section-2-l {
   width: 40.5%;
   margin-right: 1.65%;
 }
 
-.tm-section-2-r { width: 57.85%; }
-.tm-box-pad { padding: 40px 50px; }
+.tm-section-2-r {
+  width: 57.85%;
+}
+.tm-box-pad {
+  padding: 40px 50px;
+}
 
 .tm-em-box {
   display: flex;
@@ -237,18 +312,24 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
 .tm-em-box p {
   font-style: italic;
   line-height: 2;
-  max-width: 370px;  
+  max-width: 370px;
 }
 
-.tm-btn-2 { background-color: #666768; }
+.tm-btn-2 {
+  background-color: #666768;
+}
 
 .tm-btn-2:hover {
   color: white;
-  background-color: #989A9B;
+  background-color: #989a9b;
 }
 
-.tm-btn-3 { background-color: #99CC99; }
-.tm-btn-3:hover { background-color: #547d54; }
+.tm-btn-3 {
+  background-color: #99cc99;
+}
+.tm-btn-3:hover {
+  background-color: #547d54;
+}
 
 .clearfix::after {
   display: block;
@@ -257,15 +338,21 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
 }
 
 /* Gallery */
-.tm-gallery-header { padding: 40px 40px 30px; }
-.text-right { text-align: right; }
+.tm-gallery-header {
+  padding: 40px 40px 30px;
+}
+.text-right {
+  text-align: right;
+}
 
 .tm-gallery-filter {
   text-align: center;
   list-style: none;
 }
 
-.tm-gallery-filter > li { display: inline-block; }
+.tm-gallery-filter > li {
+  display: inline-block;
+}
 
 .tm-gallery-filter > li > a {
   display: block;
@@ -278,7 +365,9 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
   color: #fff;
 }
 
-.tm-gallery-section { padding-bottom: 40px; }
+.tm-gallery-section {
+  padding-bottom: 40px;
+}
 
 .tm-gallery-outer {
   margin-left: -10px;
@@ -289,19 +378,21 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
 .tm-gallery {
   padding-top: 10px;
   padding-bottom: 10px;
-  margin: 0 auto 0;  
-  max-width: 1225px;  
+  margin: 0 auto 0;
+  max-width: 1225px;
 }
 
-.tm-gallery-item { 
-  padding: 10px; 
+.tm-gallery-item {
+  padding: 10px;
   width: 20%;
 }
 
 @media (max-width: 1200px) {
-  .tm-gallery { max-width: 1200px; }
+  .tm-gallery {
+    max-width: 1200px;
+  }
   .tm-gallery-item {
-    width: 25%;    
+    width: 25%;
   }
 }
 
@@ -386,7 +477,9 @@ h1, h2, h3, h4, h5, h6 { color: #333; }
 /***** Bubba *****/
 /*---------------*/
 
-figure.effect-bubba { background: #9e5406; }
+figure.effect-bubba {
+  background: #9e5406;
+}
 
 figure.effect-bubba img {
   opacity: 1;
@@ -394,7 +487,9 @@ figure.effect-bubba img {
   transition: opacity 0.35s;
 }
 
-figure.effect-bubba:hover img { opacity: 0.4; }
+figure.effect-bubba:hover img {
+  opacity: 0.4;
+}
 
 figure.effect-bubba figcaption::before,
 figure.effect-bubba figcaption::after {
@@ -459,18 +554,30 @@ figure.effect-bubba:hover p {
 }
 
 @media (max-width: 900px) {
-  .tm-gallery { max-width: 900px; }
-  .tm-gallery-item { width: 33.3334%; }
+  .tm-gallery {
+    max-width: 900px;
+  }
+  .tm-gallery-item {
+    width: 33.3334%;
+  }
 }
 
 @media (max-width: 620px) {
-  .tm-gallery { max-width: 600px; }
-  .tm-gallery-item { width: 50%; }
+  .tm-gallery {
+    max-width: 600px;
+  }
+  .tm-gallery-item {
+    width: 50%;
+  }
 }
 
 @media (max-width: 400px) {
-  .tm-gallery { max-width: 280px; }
-  .tm-gallery-item { width: 100%; }
+  .tm-gallery {
+    max-width: 280px;
+  }
+  .tm-gallery-item {
+    width: 100%;
+  }
 }
 
 /* Contact */
@@ -480,7 +587,9 @@ figure.effect-bubba:hover p {
   text-align: center;
 }
 
-#contact { padding-bottom: 40px; }
+#contact {
+  padding-bottom: 40px;
+}
 
 .tm-contact-main {
   padding-top: 20px;
@@ -489,33 +598,39 @@ figure.effect-bubba:hover p {
 }
 
 .map-outer {
-  position:relative;
-  text-align:right;
-  min-height:400px; 
-  width:35%; 
+  position: relative;
+  text-align: right;
+  min-height: 400px;
+  width: 35%;
   height: 100%;
   padding-right: 10px;
 }
 
 .gmap-canvas {
-  overflow:hidden;
-  background:none!important;
-  min-height:400px;
-  width:100%;
+  overflow: hidden;
+  background: none !important;
+  min-height: 400px;
+  width: 100%;
 }
 
-.contact-form-outer { width: 37%; }
-.contact-info-outer { width: 28%; }
+.contact-form-outer {
+  width: 37%;
+}
+.contact-info-outer {
+  width: 28%;
+}
 
 .contact-form-outer {
   padding-left: 10px;
   padding-right: 10px;
 }
 
-.contact-info-outer { padding-left: 10px; }
+.contact-info-outer {
+  padding-left: 10px;
+}
 
 .contact-info {
-  padding: 45px 40px;  
+  padding: 45px 40px;
   height: 100%;
 }
 
@@ -525,16 +640,20 @@ figure.effect-bubba:hover p {
 }
 
 @media (max-width: 440px) {
-  #contact-form { padding: 35px; }
+  #contact-form {
+    padding: 35px;
+  }
 }
 
-.form-group { margin-bottom: 25px; }
+.form-group {
+  margin-bottom: 25px;
+}
 
 .form-control {
   display: block;
   width: 100%;
   padding: 10px 0;
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: "Open Sans", Arial, sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -542,7 +661,7 @@ figure.effect-bubba:hover p {
   background-color: transparent;
   background-clip: padding-box;
   border: none;
-  border-bottom: 1px solid #999A9B;
+  border-bottom: 1px solid #999a9b;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -551,14 +670,20 @@ figure.effect-bubba:hover p {
   display: block;
 }
 
-a { color: #666; }
-a:hover { color: #CC9999; }
-button:hover { cursor: pointer; }
+a {
+  color: #666;
+}
+a:hover {
+  color: #cc9999;
+}
+button:hover {
+  cursor: pointer;
+}
 
 .tm-social-link {
   width: 40px;
   height: 40px;
-  background-color: #DDD;
+  background-color: #ddd;
   display: inline-block;
   margin: 8px;
 }
@@ -585,8 +710,12 @@ button:hover { cursor: pointer; }
     text-align: center;
   }
 
-  .tm-section-2-l { margin-bottom: 20px; }
-  .tm-section-2-r { text-align: center; }
+  .tm-section-2-l {
+    margin-bottom: 20px;
+  }
+  .tm-section-2-r {
+    text-align: center;
+  }
 
   .tm-section-1-r,
   .tm-section-2-l {
@@ -600,31 +729,45 @@ button:hover { cursor: pointer; }
     flex-direction: column;
   }
 
-  .tm-social-row { padding: 70px 30px; }
+  .tm-social-row {
+    padding: 70px 30px;
+  }
 }
 
 @media (max-width: 800px) {
-  .tm-social-row { flex-direction: column; }
-  .tm-icon { width: 100%; }
-  .tm-icon-inner { padding: 30px; }
+  .tm-social-row {
+    flex-direction: column;
+  }
+  .tm-icon {
+    width: 100%;
+  }
+  .tm-icon-inner {
+    padding: 30px;
+  }
 }
 
 @media (min-width: 1240px) {
-  .tm-section-1-r { max-height: 700px; }
+  .tm-section-1-r {
+    max-height: 700px;
+  }
 }
 
 @media (max-width: 1145px) {
   .map-outer,
   .contact-form-outer,
   .contact-info-outer {
-    width: 100%;  
-    padding: 0;  
+    width: 100%;
+    padding: 0;
   }
 
   .map-outer,
-  .contact-form-outer { margin-bottom: 20px; }
+  .contact-form-outer {
+    margin-bottom: 20px;
+  }
 
-  .tm-contact-main { flex-direction: column; }
+  .tm-contact-main {
+    flex-direction: column;
+  }
 }
 
 /* https://codepen.io/matthewcain/pen/ZepbeR */
@@ -632,7 +775,7 @@ button:hover { cursor: pointer; }
   padding-top: 1px;
   display: inline-block;
   color: #fff;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   width: 40px;
   height: 40px;
   text-align: center;
@@ -640,8 +783,7 @@ button:hover { cursor: pointer; }
   position: fixed;
   bottom: 30px;
   right: 30px;
-  transition: background-color .3s, 
-    opacity .5s, visibility .5s;
+  transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
   opacity: 0;
   visibility: hidden;
   z-index: 1000;
@@ -650,7 +792,9 @@ button:hover { cursor: pointer; }
   cursor: pointer;
   background-color: #333;
 }
-#button:active { background-color: #555; }
+#button:active {
+  background-color: #555;
+}
 #button.show {
   opacity: 1;
   visibility: visible;
